fixed organizing commitee "Dept. of" text and fixed text wrapping to next line in one of the card

--- a/css/styles.css
+++ b/css/styles.css
@@ -553,7 +553,7 @@ img {
   color: white;
 }
 .name-card.categ p {
-  width: 200px;
+  width: 250px;
   margin: 10px 5px 20px 5px;
 }
 
